--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="csty green1">Python</div>
       <div class="csty yellow1">Web Development</div>
       <div class="csty yellow1">R programming</div>
-      <div class="csty red1">Tablau</div>
+      <div class="csty red1">Tableau</div>
       <div class="csty green1">Data Analysis</div>
       <div class="csty yellow1">Machine Learning</div>
     </div>
