--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <meta charset="utf-8" >  
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+  <!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+
   <title>Grid Master</title>
   <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
@@ -42,7 +45,7 @@
       <div class="csty green1">Python</div>
       <div class="csty yellow1">Web Development</div>
       <div class="csty yellow1">R programming</div>
-      <div class="csty red1">Tableau</div>
+      <div class="csty red1">Tablau</div>
       <div class="csty green1">Data Analysis</div>
       <div class="csty yellow1">Machine Learning</div>
     </div>
@@ -217,10 +220,30 @@
 
 
   <!-- Srikant Shubham 20112046 starts here -->
-  <div class="zone blue">🙂</div>
+  <div  id="Sri">
+<div class="container mt-5">
+  <div class="row">
+    <div class="col-md-6 col-sm-12 mt-5 mr-5">
+      <h2 >Hi I am <h1>Srikant Shubham</h1>
+      </h2>
+      
+    </div>
+  <div class="col-md-6 col-sm-12">
+
+    <img src="resources/task.png" alt="" class="img-fluid mb-5">
+  </div>
+  </div>
+  
+</div>
+
+  </div>
   <!-- Srikant Shubham 20112046 ends here -->
 
+<!-- Demo starts here -->
+<div class="zone blue1">
+  
 
+</div>
 
 
 
