--- a/index.html
+++ b/index.html
@@ -103,7 +103,66 @@
   
 
   <!-- Anukriti Sharma	20112006 starts here -->
-  <div class="zone blue">🙂</div>
+<div class="zone blue1">
+      <img align="left" src="FORMALPICTURE.jpg" width="140" height="142" style="border:4px solid black; margin: 0 auto;">
+      <p style="color: #4285F4; font-size: 30px; padding-top: 15px; padding-left: 10px;">Hello this is "Anukriti Sharma"</p>
+      <div style="font-size: 25px;"><span class="material-symbols-outlined" style="color: #4285F4; line-height:24px; font-size:15;"> mail </span> anukriti.sharma@science.christuniversity.in </div>
+      <!-- <div style="font-size: 20px;">Linked In:  </div> -->
+      <p style="font-size:20px;">I am a student of Bachelors of Science (Data Science) in secondary education, keen on 
+          starting an internship with your company in the data science department that will improve 
+          my learning curve and enhance the mentorship culture.</p>
+      <p style="font-size: 20px;">My Information</p>
+      <div class="hContainer">
+        <div class="csty yellow1">Name-Anukriti Sharma</div>
+        <div class="csty red1">Christ University</div>
+        <div class="csty green1">Roll_no - 20112006</div>
+        <div class="csty yellow1">Languages spoken - Hindi, punjabi and english</div>
+        <div class="csty yellow1">Subject - Web programming</div>
+        <div class="csty red1">Date_of_Birth - 24th November</div>
+        <div class="csty green1">Mobile_Number - 6203860308</div>
+        <div class="csty yellow1">Address - sp 40, portofino Street, Lavasa</div>
+      </div>
+  
+      <p style="font-size: 20px;">Projects that i did</p>
+      <div class="hContainer">
+        <div class="csty yellow1">Machine Learning</div>
+        <div class="csty red1">Classification Analysis</div>
+        <div class="csty green1">Market Baske</div>
+        <div class="csty yellow1">Website Analytics</div>
+        <div class="csty yellow1">Machine Learning</div>
+        <div class="csty red1">Artificial Intellegence</div>
+        <div class="csty green1">Data Analytics</div>
+        <div class="csty yellow1">Website Analytics</div>
+      </div>
+  
+      <p style="font-size: 20px;">My Hobbies</p>
+      <div class="hContainer">
+        <div class="csty yellow1">Reading Books</div>
+        <div class="csty red1">Cricket</div>
+        <div class="csty green1">Chess</div>
+        <div class="csty yellow1">Focusing on my fitness</div>
+        <div class="csty yellow1">Reading Books</div>
+        <div class="csty red1">Cricket</div>
+        <div class="csty green1">Chess</div>
+        <div class="csty yellow1">Focusing on my fitness</div>
+      </div>
+  
+      <div class="whatilivefor">
+        <div>
+          <h4 style="font-size: 20px;">what i live for?</h4>
+          <p style="font-size: 20px;">I live for my freedom and my family & friends</p>
+        </div>
+      </div>
+  
+      <div class="lifemeanstome">
+        <div>
+          <h4 style="font-size: 20px;">what life means to me</h4>
+          <p style="font-size: 20px;">Passing through time</p>
+        </div>
+      </div>
+  
+    </div>
+
   <!-- Anukriti Sharma	20112006 ends here -->
 
 
