--- a/index.html
+++ b/index.html
@@ -112,7 +112,63 @@
 
 
   <!-- Fathimathul Susna ShoukkathAli	20112013 starts here -->
-  <div class="zone blue">🙂</div>
+  <div class="zone blue">
+
+    <div class="zone blue1">
+      <p style="color: #4285F4; font-size: 30px; padding-top: 15px; padding-left: 10px;">Hello this is "Fathimathul Susna ShoukkathAli"</p>
+      <div style="font-size: 25px;"><span class="material-symbols-outlined" style="color: #4285F4; line-height:24px; font-size:15;"> mail </span> fathimathul.ali@science.christuniversity.in </div>
+      <div style="font-size: 30px;"><p style="color: #4285F4; font-size: 15px">I am a student of Bachelors of Science (Data Science) in secondary education, keen on starting an internship with your company in the data Science department that will improve my learning curve and enhance the mentorship culture.</div>
+      <!-- <div style="font-size: 20px;">Linked In:  </div> -->
+  
+      <p style="font-size: 20px;">My Skills</p>
+      <div class="hContainer">
+        <div class="csty yellow1">Microsoft Exel</div>
+        <div class="csty red1">SQL</div>
+        <div class="csty green1">Python</div>
+        <div class="csty yellow1">Web Development</div>
+        <div class="csty yellow1">R programming</div>
+        <div class="csty red1">Tablau</div>
+        <div class="csty green1">Data Analysis</div>
+        <div class="csty yellow1">Machine Learning</div>
+      </div>
+  
+      <p style="font-size: 20px;">Projects that i did</p>
+      <div class="hContainer">
+        <div class="csty yellow1">Machine Learning:Streamlit App Creation</div>
+        <div class="csty red1">Pixel Scene Segmentation(Computer Vision)</div>
+        <div class="csty green1"></div>
+        <div class="csty yellow1">Website Analytics</div>
+        
+      </div>
+  
+      <p style="font-size: 20px;">My Hobbies</p>
+      <div class="hContainer">
+        <div class="csty yellow1">Reading Books</div>
+        <div class="csty red1">Cricket</div>
+        <div class="csty green1">Chess</div>
+        <div class="csty yellow1">Focusing on my fitness</div>
+        <div class="csty yellow1">Reading Books</div>
+        <div class="csty red1">Cricket</div>
+        <div class="csty green1">Chess</div>
+        <div class="csty yellow1">Focusing on my fitness</div>
+      </div>
+  
+      <div class="whatilivefor">
+        <div>
+          <h4 style="font-size: 20px;">what i live for?</h4>
+          <p style="font-size: 20px;">I live for my freedom and my family & friends</p>
+        </div>
+      </div>
+  
+      <div class="lifemeanstome">
+        <div>
+          <h4 style="font-size: 20px;">what life means to me</h4>
+          <p style="font-size: 20px;">Passing through time</p>
+        </div>
+      </div>
+  
+    </div>
+  </div>
   <!-- Fathimathul Susna ShoukkathAli	20112013 ends here -->
 
 
