--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
   <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lobster&family=Poppins&family=Roboto&display=swap" rel="stylesheet"> 
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
   <title>Grid Master</title>
   <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
@@ -220,13 +223,15 @@
 
 
   <!-- Srikant Shubham 20112046 starts here -->
-  <div  id="Sri">
+  <section  class="sri">
 <div class="container mt-5">
   <div class="row">
     <div class="col-md-6 col-sm-12 mt-5 mr-5">
-      <h2 >Hi I am <h1>Srikant Shubham</h1>
+      <h2 style="font-size: 3rem;">Hi I am <h1 style="font-size:4rem;">Srikant Shubham</h1>
       </h2>
-      
+      <h1 class="mt-2 mb-3">
+        <span id="typed3"> </span> </h1>
+        
     </div>
   <div class="col-md-6 col-sm-12">
 
@@ -235,8 +240,18 @@
   </div>
   
 </div>
-
-  </div>
+<script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+<script>
+  var typed3 = new Typed('#typed3', {
+  strings: ['I am a : Data Scientist' ,'I am a : Front End Dev ', 'I am a : Illustrator ','I am a : Data Scientist '],
+  typeSpeed: 50,
+  backSpeed: 50,
+  smartBackspace: true, // this is a default
+  loop: true,
+  
+  });
+</script>
+  </section>
   <!-- Srikant Shubham 20112046 ends here -->
 
 <!-- Demo starts here -->
