--- a/index.html
+++ b/index.html
@@ -257,7 +257,9 @@
 
 
   <!-- Mubaris Mansoor	20112020 starts here -->
-  <div class="zone blue">🙂</div>
+  <div class="zone blue">
+    I am a Mubaris
+  </div>
   <!-- Mubaris Mansoor	20112020 ends here -->
 
 
