--- a/index.html
+++ b/index.html
@@ -295,7 +295,29 @@
 
 
   <!-- Sandeep Jabez	20112029 starts here -->
-  <div class="zone blue">🙂</div>
+  <div class="zone name"> <span class="material-symbols-outlined"
+    style="color: #470d14; line-height:24px; font-size:15;">
+    <p style="color: #3a191d; font-size: 25px; "> Sandeep Jabez</p>
+  </span>
+  <!-- make it to the left side -->
+  <div style="font-size: 25px;"> Contact me at: sandeepjabez123@email.com </div>
+
+  <p style="font-size: 25px;">My Skills : </p>
+  <div class="p1">
+    <!-- <span class="p1"> -->
+    <div class="csty yellow">Microsoft Exel</div>
+    <div class="csty red">SQL</div>
+    <div class="csty green1">Python</div>
+    <div class="csty yellow">Web Development</div>
+    <div class="csty yellow1">R programming</div>
+    <div class="csty red">Tablau</div>
+    <div class="csty green">Data Analysis</div>
+    <div class="csty yellow1">Machine Learning</div>
+  </div>
+
+
+
+</div>
   <!-- Sandeep Jabez	20112029 ends here -->
 
 
