--- a/index.html
+++ b/index.html
@@ -346,7 +346,13 @@
       </h2>
       <h1 class="mt-2 mb-3">
         <span id="typed3"> </span> </h1>
-        
+        <div class="footer-social-links">
+          <a href="#" title="Facebook" target="_blank"><i class="fab fa-facebook fa-3x"></i></a>
+          <a href="#" title="Twitter" target="_blank"><i class="fab fa-twitter fa-3x"></i></a>
+          <a href="#" title="Google+" target="_blank"><i class="fab fa-google-plus fa-3x"></i></a>
+          <a href="#" title="LinkedIn+" target="_blank"><i class="fab fa-linkedin fa-3x"></i></a>
+          <a href="#" title="Dribbble" target="_blank"><i class="fab fa-dribbble fa-3x"></i></a>
+        </div>
     </div>
   <div class="col-md-6 col-sm-12">
 
