--- a/index.html
+++ b/index.html
@@ -104,10 +104,10 @@
 
   <!-- Anukriti Sharma	20112006 starts here -->
 <div class="zone blue1">
-      <img align="left" src="FORMALPICTURE.jpg" width="140" height="142" style="border:4px solid black; margin: 0 auto;">
-      <p style="color: #4285F4; font-size: 30px; padding-top: 15px; padding-left: 10px;">Hello this is "Anukriti Sharma"</p>
+      <img align="right" src="FORMALPICTURE.jpg" width="140" height="142" style="border:4px solid black; margin: 0 auto;">
+      <p style="color: #4285F4; font-size: 30px; padding-top: 15px; padding-left: 10px;">Anukriti Sharma</p>
       <div style="font-size: 25px;"><span class="material-symbols-outlined" style="color: #4285F4; line-height:24px; font-size:15;"> mail </span> anukriti.sharma@science.christuniversity.in </div>
-      <!-- <div style="font-size: 20px;">Linked In:  </div> -->
+      <div style="font-size: 20px;">Linked In: <a href="https://www.linkedin.com/in/anukriti-sharma-53a4a1206/"> Click here to get my linkedin account </a> </div> 
       <p style="font-size:20px;">I am a student of Bachelors of Science (Data Science) in secondary education, keen on 
           starting an internship with your company in the data science department that will improve 
           my learning curve and enhance the mentorship culture.</p>
@@ -127,24 +127,24 @@
       <div class="hContainer">
         <div class="csty yellow1">Machine Learning</div>
         <div class="csty red1">Classification Analysis</div>
-        <div class="csty green1">Market Baske</div>
-        <div class="csty yellow1">Website Analytics</div>
-        <div class="csty yellow1">Machine Learning</div>
-        <div class="csty red1">Artificial Intellegence</div>
-        <div class="csty green1">Data Analytics</div>
-        <div class="csty yellow1">Website Analytics</div>
+        <div class="csty green1">Market Basket Analysis</div>
+        <div class="csty yellow1">Customer lifetime value </div>
+        <div class="csty yellow1">RFM Modelling</div>
+        <div class="csty red1">BG/NBD and Gamma-Gamma model</div>
+        <div class="csty green1">Data visualization using Tableau</div>
+        <div class="csty yellow1">Desktop Applications</div>
       </div>
   
       <p style="font-size: 20px;">My Hobbies</p>
       <div class="hContainer">
-        <div class="csty yellow1">Reading Books</div>
-        <div class="csty red1">Cricket</div>
-        <div class="csty green1">Chess</div>
+        <div class="csty yellow1">Basketball</div>
+        <div class="csty red1">Volleyball</div>
+        <div class="csty green1">Dancing</div>
         <div class="csty yellow1">Focusing on my fitness</div>
         <div class="csty yellow1">Reading Books</div>
-        <div class="csty red1">Cricket</div>
-        <div class="csty green1">Chess</div>
-        <div class="csty yellow1">Focusing on my fitness</div>
+        <div class="csty red1">Cooking</div>
+        <div class="csty green1">Coding</div>
+        <div class="csty yellow1">Natural Language Processing (NLP)</div>
       </div>
   
       <div class="whatilivefor">
