--- a/index.html
+++ b/index.html
@@ -286,7 +286,37 @@
 
 
   <!-- Rahul Raj	20112024 starts here -->
-  <div class="zone blue">🙂</div>
+    <div class="zone grey">🎈🎈🎈<p style="color: black; font-size: 30px;">Hello this is "Rahul"</p>
+      <div style="font-size: 25px;"><span class="material-symbols-outlined" style="color: #f14819; line-height:24px; font-size:15;"> mail </span> rahul2k02@gmail.com </div>
+      <div class="whatilivefor">
+        <div>
+          <h4 style="font-size: 20px;">what i live for?</h4>
+          <p style="font-size: 20px;">I live to die!</p>
+        </div>
+      </div>
+  
+      <div class="lifemeanstome">
+        <div>
+          <h4 style="font-size: 20px;">what life means to me</h4>
+          <p style="font-size: 20px;">Actually, life is bleh :P</p>
+        </div>
+      </div>
+  
+      <div class="whatiwanttobecome">
+        <div>
+          <h4 style="font-size: 20px;">what do i want to become?</h4>
+          <p style="font-size: 20px;">STOP READING MY CONTENT</p>
+        </div>
+      </div>
+  
+      <h4 style="font-size: 20px;">My Skills</h4>
+      <div class="hContainer">
+        <div class="csty yellow1">Microsoft Exel</div>
+        <div class="csty red1">SQL</div>
+        <div class="csty green1">Python</div>
+      </div>
+
+  </div>
   <!-- Rahul Raj	20112024 ends here -->
 
 
