--- a/index.html
+++ b/index.html
@@ -402,7 +402,56 @@
 
 
   <!-- Naveen N S	20112045 starts here -->
-  <div class="zone blue">🙂</div>
+  <div class="zone blue_20112045">
+    <div class="zone blue1_20112045">
+      <p style="color: #000000ea; font-size: 30px; padding-top: 15px; padding-left: 10px;">Hello..I'm Naveen N S</p>
+      <div style="font-size: 25px;"><span class="material-symbols-outlined" style="color: #000000; line-height:24px; font-size:25px;"> <b>Email:</b> </span> naveen.ns@science.christuniversity.in </div>
+      <!-- <div style="font-size: 20px;">Linked In:  </div> -->
+  
+      <p style="font-size: 20px;"><strong>My Skills: </strong> </p>
+      <div class="hContainer">
+        <div class="csty yellow1">Microsoft Exel</div>
+        <div class="csty red1">MySQL</div>
+        <div class="csty green1">Python Programming</div>
+        <div class="csty yellow1">Web Development</div>
+        <div class="csty yellow1">R programming</div>
+        <div class="csty red1">Java Programming</div>
+        <div class="csty green1">Data Analysis</div>
+        <div class="csty yellow1">Machine Learning</div>
+      </div>
+  
+      <p style="font-size: 20px;"><strong>Projects That I Did: </strong></p>
+      <div class="hContainer">
+        <div class="csty yellow1">Pixel Level Scene Segmentation</div>
+        <div class="csty red1">Building Face Recognition Application Using Python</div>
+        <div class="csty yellow1">Flight Delay Prediction</div>
+      </div>
+  
+      <p style="font-size: 20px;"><strong>My Hobbies: </strong></p>
+      <div class="hContainer">
+        <div class="csty yellow1">Stock Trading</div>
+        <div class="csty red1">Cricket</div>
+        <div class="csty green1">Swimming</div>
+        <div class="csty yellow1">Focusing on my fitness</div>
+        <div class="csty yellow1">Follow Aviation</div>
+      </div>
+  
+      <div class="whatilivefor">
+        <div>
+          <h4 style="font-size: 20px;"><strong>What I Live For..?</strong></h4>
+          <p style="font-size: 20px;">I live to travel and enjoy life..!</p>
+        </div>
+      </div>
+  
+      <div class="lifemeanstome">
+        <div>
+          <h4 style="font-size: 20px;"><strong>What Life Means To Me..?</strong></h4>
+          <p style="font-size: 20px;">Achieving what I dreamt and live life satisfied</p>
+        </div>
+      </div>
+  
+    </div>
+  </div>
   <!-- Naveen N S	20112045 ends here -->
 
 
