--- a/index.html
+++ b/index.html
@@ -97,7 +97,40 @@
 
   
   <!-- Akash Varughese Joseph	20112002 starts here -->
-  <div class="zone blue">🙂</div>
+  <div class="zone blue">
+    <div class="zone green1">
+      <div class="zone blue1">
+        <p style="color: #4285F4; font-size: 30px; padding-top: 15px; padding-left: 5px; text-align: center;">Hello this is Akash Varughese Joseph</p>
+        <div style="font-size: 25px; text-align: center;"><span class="material-symbols-outlined" style="color: #4285F4; line-height:24px; font-size:15;"> mail </span> akash.joseph@science.christuniversity.in </div>
+      <!-- <div style="font-size: 20px;">Linked In:  </div> -->
+  
+      <p style="font-size: 20px; text-align: center;">My Skills</p>
+      <div class="hContainer20112002">
+        <div class="csty yellow1">Microsoft Exel</div>
+        <div class="csty red1">SQL</div>
+        <div class="csty green1">Python</div>
+        <div class="csty green1">Web Development</div>
+        <div class="csty yellow1">R programming</div>
+        <div class="csty yellow1">Machine Learning</div>
+      </div>
+  
+      <p style="font-size: 20px; text-align: center;">Projects that i did</p>
+      <div class="hContainer20112002">
+        <div class="csty yellow1">Neural Networks</div>
+        <div class="csty red1">Image Segmentation</div>
+        <div class="csty green1">Object Detection</div>
+      </div>
+  
+      <p style="font-size: 20px; text-align: center;">My Hobbies</p>
+      <div class="hContainer20112002">
+        <div class="csty red1">Music</div>
+        <div class="csty green1">Gaming</div>
+        <div class="csty red1">Cricket</div>
+      </div>
+  
+      </div>
+    </div>
+  </div>
   <!-- Akash Varughese Joseph	20112002 ends here -->
 
 
