--- a/index.html
+++ b/index.html
@@ -536,7 +536,39 @@
 
 
   <!-- Lydia Monoi	20112309 starts here -->
-  <div class="zone blue">🙂</div>
+  <div class="zone purple">
+    <p style="color:black; font-size: 30px; padding-top: 15px; padding-left: 10px;">Hello this is "Lydia Monoi"</p>
+    <div style="font-size: 25px;"><span class="material-symbols-outlined" style="color: red; line-height:24px; font-size:15;"> mail </span> <p style= "color: black"> clydia2002@gmail.com </p> </div>
+
+    <p style="font-size: 20px;">My Skills</p>
+    <div class="hContainer20112309">
+      <div class="csty yellow1">Microsoft Exel</div>
+      <div class="csty red1">SQL</div>
+      <div class="csty green1">Python</div>
+      <div class="csty yellow1"> Beginner Web Development</div>
+      <div class="csty yellow1">R programming</div>
+      <div class="csty red1">Econometrics</div>
+      <div class="csty green1">Data Analysis</div>
+      <div class="csty yellow1">Machine Learning</div>
+    </div>
+
+    <p style="font-size: 20px;">My Hobbies</p>
+    <div class="hContainer20112309">
+      <div class="csty yellow1">Cooking</div>
+      <div class="csty red1">Singing</div>
+      <div class="csty green1">Piano</div>
+      <div class="csty yellow1">Working out</div>
+    </div>
+
+    <p style="font-size: 20px;">Lavasa Photos</p>
+    <img src="925107121s.JPG" alt="Scenery">
+    <img src="new photo.jpg" alt="Scenery">
+
+
+
+
+
+  </div>
   <!-- Lydia Monoi	20112309 ends here -->
 
 
