--- a/index.html
+++ b/index.html
@@ -181,7 +181,84 @@
 
 
   <!-- U Mahima	20112035 starts here -->
-  <div class="zone blue">🙂</div>
+  <div class="zone blue">
+
+  <div class="zone blue1">
+    <p style="color: rgb(82, 58, 175); font-size: 40px; padding-top: 15px; padding-left: 10px; text-align: center; font-style: bold;">Hello this is U Mahima!</p>
+    <div style="font-size: 25px;"><span class="material-symbols-outlined" style="color: #4285F4; line-height:24px; font-size:15;"> mail </span> u.mahima@science.christuniversity.in </div>
+    <!-- <div style="font-size: 20px;">Linked In:  </div> -->
+    <div class="Personalinfo">
+      <div>
+        <h4 style="font-size: 20px;">Education Information</h4>
+        <table style="height: 150px; width:200px; font-size: 20px">
+          <tr>
+            <th>Class/course</th>
+            <th>School/College/University</th>
+            <th>Percentage</th>
+          </tr>
+          <tr>
+            <td>10th</td>
+            <td>Jubilee Hills Public School</td>
+            <td>93.6%</td>
+          </tr>
+          <tr>
+            <td>12th</td>
+            <td>P. Obul Reddy Public School</td>
+            <td>90.8%</td>
+          </tr>
+          <tr>
+            <td>BSc Data Science</td>
+            <td>Christ (Deemed to be University),Lavasa</td>
+            <td>75.4%</td>
+          </tr> 
+        </table>
+      </div>
+    </div>
+    
+    <p style="font-size: 20px;">My Skills</p>
+    <div class="hContainer">
+      <div class="csty yellow1">Microsoft Exel</div>
+      <div class="csty red1">SQL</div>
+      <div class="csty green1">Python</div>
+      <div class="csty pink1">Web Development</div>
+      <div class="csty yellow1">R programming</div>
+      <div class="csty red1">Tablau</div>
+      <div class="csty green1">Data Analysis</div>
+      <div class="csty pink1">Machine Learning</div>
+      <div class="csty yellow1">Java</div>
+    </div>
+
+    <p style="font-size: 20px;">Projects that i did</p>
+    <div class="hContainer2">
+      <div class="csty2 purple1">Data Visualization</div>
+      <div class="csty2 pink1">3D Object Detection</div>
+      <div class="csty2 purple1">Image Segmentation</div>
+    </div>
+
+    <p style="font-size: 20px;">My Hobbies</p>
+    <div class="hContainer">
+      <div class="csty yellow">Dance</div>
+      <div class="csty pink1">Basketball</div>
+      <div class="csty brown">Swimming</div>
+      <div class="csty blue">Origami</div>
+      <div class="csty purple1">Throwball</div>
+      <div class="csty green">Cooking</div>
+    </div>
+
+    <div class="whatilivefor">
+      <div>
+        <h4 style="font-size: 20px;">What i live for?</h4>
+        <p style="font-size: 20px;">I live for my family & friends</p>
+      </div>
+    </div>
+
+    <div class="lifemeanstome">
+      <div>
+        <h4 style="font-size: 20px;">What life means to me</h4>
+        <p style="font-size: 20px;">A Roller Coaster ride!</p>
+      </div>
+    </div>
+  </div>
   <!-- U Mahima	20112035 ends here -->
 
 
