--- a/index.html
+++ b/index.html
@@ -184,29 +184,42 @@
   <div class="zone blue">
 
   <div class="zone blue1">
-    <p style="color: rgb(82, 58, 175); font-size: 40px; padding-top: 15px; padding-left: 10px; text-align: center; font-style: bold;">Hello this is U Mahima!</p>
+    <p style="color: rgb(82, 58, 175); font-size: 40px; padding-top: 15px; padding-left: 10px; text-align: center;"><b>Hello this is U Mahima!</b></p>
     <div style="font-size: 25px;"><span class="material-symbols-outlined" style="color: #4285F4; line-height:24px; font-size:15;"> mail </span> u.mahima@science.christuniversity.in </div>
     <!-- <div style="font-size: 20px;">Linked In:  </div> -->
     <div class="Personalinfo">
       <div>
         <h4 style="font-size: 20px;">Education Information</h4>
-        <table style="height: 150px; width:200px; font-size: 20px">
-          <tr>
+        <style>
+          table, th, td {
+           font-family: arial, sans-serif;
+           border-collapse: collapse;
+           width: 100%;
+           border:1px solid black;
+           text-align: left;
+           padding: 8px;
+          }
+          tr:nth-child(even) {
+          background-color:rgb(204, 232, 242);
+          }
+        </style>
+        <table style="height: 150px; width:200px; font-size: 15px">
+          <tr style="color:black">
             <th>Class/course</th>
             <th>School/College/University</th>
             <th>Percentage</th>
           </tr>
-          <tr>
+          <tr style="color:black">
             <td>10th</td>
             <td>Jubilee Hills Public School</td>
             <td>93.6%</td>
           </tr>
-          <tr>
+          <tr style="color:black">
             <td>12th</td>
             <td>P. Obul Reddy Public School</td>
             <td>90.8%</td>
           </tr>
-          <tr>
+          <tr style="color:black">
             <td>BSc Data Science</td>
             <td>Christ (Deemed to be University),Lavasa</td>
             <td>75.4%</td>
@@ -215,7 +228,7 @@
       </div>
     </div>
     
-    <p style="font-size: 20px;">My Skills</p>
+    <p style="font-size: 20px;"><b>My Skills</b></p>
     <div class="hContainer">
       <div class="csty yellow1">Microsoft Exel</div>
       <div class="csty red1">SQL</div>
@@ -228,18 +241,18 @@
       <div class="csty yellow1">Java</div>
     </div>
 
-    <p style="font-size: 20px;">Projects that i did</p>
+    <p style="font-size: 20px;"><b>Projects that i did</b></p>
     <div class="hContainer2">
-      <div class="csty2 purple1">Data Visualization</div>
-      <div class="csty2 pink1">3D Object Detection</div>
-      <div class="csty2 purple1">Image Segmentation</div>
+      <div class="csty purple1">Data Visualization</div>
+      <div class="csty pink1">3D Object Detection</div>
+      <div class="csty green">Image Segmentation</div>
     </div>
 
-    <p style="font-size: 20px;">My Hobbies</p>
+    <p style="font-size: 20px;"><b>My Hobbies</b></p>
     <div class="hContainer">
       <div class="csty yellow">Dance</div>
       <div class="csty pink1">Basketball</div>
-      <div class="csty brown">Swimming</div>
+      <div class="csty red">Swimming</div>
       <div class="csty blue">Origami</div>
       <div class="csty purple1">Throwball</div>
       <div class="csty green">Cooking</div>
@@ -247,14 +260,14 @@
 
     <div class="whatilivefor">
       <div>
-        <h4 style="font-size: 20px;">What i live for?</h4>
+        <h4 style="font-size: 20px;"><b>What i live for?</b></h4>
         <p style="font-size: 20px;">I live for my family & friends</p>
       </div>
     </div>
 
     <div class="lifemeanstome">
       <div>
-        <h4 style="font-size: 20px;">What life means to me</h4>
+        <h4 style="font-size: 20px;"><b>What life means to me</b></h4>
         <p style="font-size: 20px;">A Roller Coaster ride!</p>
       </div>
     </div>
