--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
   
   <!-- Demo starts here -->
   <div class="zone blue1">
-    <p style="color: #4285F4; font-size: 30px; padding-top: 15px; padding-left: 10px;">Hello this is "Your Name"</p>
+    <p style="color: peru; font-size: 30px; padding-top: 15px; padding-left: 10px;">Hello this is "Your Name"</p>
     <div style="font-size: 25px;"><span class="material-symbols-outlined" style="color: #4285F4; line-height:24px; font-size:15;"> mail </span> email@email.com </div>
     <!-- <div style="font-size: 20px;">Linked In:  </div> -->
 
-    <p style="font-size: 20px;">My Skills</p>
+    <p style="font-size: 100px;">My Skills</p>
     <div class="hContainer">
       <div class="csty yellow1">Microsoft Exel</div>
       <div class="csty red1">SQL</div>
@@ -190,7 +190,83 @@
 
 
   <!-- Vidhi Saha	20112036 starts here -->
-  <div class="zone blue">🙂</div>
+  
+  <div class="zone blue">
+    <div class="zone blue1">
+      <p style="color: #01070f; font-size: 70px; padding-top: 25px; padding-left: 600px;">Hello this is Vidhi Saha!!</p>
+      <div style="font-size: 35px;padding-top: 15px; padding-left: 650px"><span class="material-symbols-outlined" style="color: #4285F4; line-height:24px; font-size:15;"> mail </span><strong>vidhi.saha@science.christuniversity.in </strong> </div>
+      <div style="font-size: 30px;padding-top: 15px; padding-left: 600px"><strong>LinkedIn: www.linkedin.com/in/vidhi-saha-9214b4206</strong> </div> 
+      <style>
+        table, th, td {
+          border: 1px solid black;
+        }
+        </style>
+        
+        <table style="height:30px; width:30px; font-size:25px;">
+
+          <tr>
+            <th><strong>Course</strong></th>
+            <th><strong>School/University</strong></th>
+            <th><strong>Percentage</strong></th>
+          </tr>
+          <tr>
+            <td>10th</td>
+            <td>DBMS KADMA HIGH SCHOOL</td>
+            <td>89.2%</td>
+          </tr>
+          <tr>
+            <td>12th</td>
+            <td>ST. MARYS ENGLISH HIGH SCHOOL</td>
+            <td>84.2%</td>
+          </tr>
+          <tr>
+            <td>BSc Data Science</td>
+            <td>CHRIST UNIVERSITY</td>
+            <td>73.2%(Aggregate of 4 semesters)</td>
+          </tr>
+        </table>
+      <p style="font-size: 40px;"><strong>My Skills</strong></p>
+      <div class="hContainer">
+        <div class="csty yellow1">Microsoft Excel</div>
+        <div class="csty green1">SQL</div>
+        <div class="csty red1">Python</div>
+        <div class="csty orange1">Web Development</div>
+        <div class="csty yellow1">R programming</div>
+        <div class="csty green1">Tableau</div>
+        <div class="csty red1">Java</div>
+        <div class="csty orange1">Machine Learning</div>
+      </div>
+  
+      <p style="font-size: 40px;"><strong>Projects that I did</strong></p>
+      <div class="hContainer">
+        <div class="csty yellow1">3d Object Detection</div>
+        <div class="csty red1">Scrap Value - Diversion To Scales</div>
+      </div>
+  
+      <p style="font-size: 40px;"><strong>Hobbies and Interests</strong></p>
+      <div class="hContainer">
+        <div class="csty yellow1">Reading Novels</div>
+        <div class="csty red1">Dance</div>
+        <div class="csty green1">Listening to music</div>
+        <div class="csty yellow1">Cooking</div>
+        <div class="csty red1">Volleyball</div>
+
+      </div>
+  
+      <div class="whatilivefor">
+        <div>
+          <h4 style="font-size: 45px;">what I live for?</h4>
+          <p style="font-size: 40px;">I live for my family</p>
+        </div>
+      </div>
+  
+      <div class="lifemeanstome">
+        <div>
+          <h4 style="font-size: 45px;">what life means to me</h4>
+          <p style="font-size: 40px;">Like a book</p>
+        </div>
+      </div>
+  </div>
   <!-- Vidhi Saha	20112036 ends here -->
 
 
