--- a/index.html
+++ b/index.html
@@ -626,52 +626,50 @@
 
     <p style="font-size: 20px;">My Skills</p>
     <div class="hContainer">
-      <div class="csty yellow1">Microsoft Exel</div>
-      <div class="csty red1">SQL</div>
+      <div class="csty yellow1">Tableau</div>
+      <div class="csty red1">Lexalytics</div>
+      <div class="csty red1">Sprinklr</div>
       <div class="csty green1">Python</div>
       <div class="csty yellow1">Web Development</div>
       <div class="csty yellow1">R programming</div>
-      <div class="csty red1">Tableau</div>
-      <div class="csty green1">Data Analysis</div>
+      <div class="csty red1">Econometrics</div>
+      <div class="csty green1">Sentiment Analytics</div>
       <div class="csty yellow1">Machine Learning</div>
     </div>
 
     <p style="font-size: 20px;">Projects that i did</p>
     <div class="hContainer">
-      <div class="csty yellow1">Machine Learning</div>
+      <div class="csty yellow1">Text Analytics/div>
       <div class="csty red1">Artificial Intellegence</div>
-      <div class="csty green1">Data Analytics</div>
-      <div class="csty yellow1">Website Analytics</div>
-      <div class="csty yellow1">Machine Learning</div>
+      <div class="csty green1">Web Design</div>
+      <div class="csty yellow1">Virtual-CIO</div>
+      <div class="csty yellow1">CRM Analytics</div>
       <div class="csty red1">Artificial Intellegence</div>
-      <div class="csty green1">Data Analytics</div>
-      <div class="csty yellow1">Website Analytics</div>
+      <div class="csty green1">Startup Strategy Consultation</div>
+      <div class="csty yellow1">Data Analytics</div>
     </div>
 
     <p style="font-size: 20px;">My Hobbies</p>
     <div class="hContainer">
-      <div class="csty yellow1">Reading Books</div>
+      <div class="csty yellow1">Watching Podcasts</div>
+      <div class="csty red1">Badminton</div>
+      <div class="csty green1">Nutrition and Wellness</div>
+      <div class="csty yellow1">Food</div>
+      <div class="csty yellow1">Music</div>
       <div class="csty red1">Cricket</div>
-      <div class="csty green1">Chess</div>
-      <div class="csty yellow1">Focusing on my fitness</div>
-      <div class="csty yellow1">Reading Books</div>
-      <div class="csty red1">Cricket</div>
-      <div class="csty green1">Chess</div>
-      <div class="csty yellow1">Focusing on my fitness</div>
+
     </div>
 
-    <div class="whatilivefor">
+    <div class="Life-Motto">
       <div>
-        <h4 style="font-size: 20px;">what i live for?</h4>
-        <p style="font-size: 20px;">I live for my freedom and my family & friends</p>
+        <h4 style="font-size: 20px;">Life-Motto</h4>
+        <p style="font-size: 20px;">Never sit idle</p>
       </div>
     </div>
 
-    <div class="lifemeanstome">
-      <div>
-        <h4 style="font-size: 20px;">what life means to me</h4>
-        <p style="font-size: 20px;">Passing through time</p>
-      </div>
+
+
+    
     </div>
     
    
