--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
   <div class="zone blue">
 
   <div class="zone blue1">
-    <p style="color: rgb(82, 58, 175); font-size: 40px; padding-top: 15px; padding-left: 10px; text-align: center;"><b>Hello this is U Mahima!</b></p>
+    <p style="color: rgb(46, 55, 190); font-size: 40px; padding-top: 15px; padding-left: 10px; text-align: center;"><b>Hello this is U Mahima!</b></p>
     <div style="font-size: 25px;"><span class="material-symbols-outlined" style="color: #4285F4; line-height:24px; font-size:15;"> mail </span> u.mahima@science.christuniversity.in </div>
     <!-- <div style="font-size: 20px;">Linked In:  </div> -->
     <div class="Personalinfo">
@@ -230,38 +230,38 @@
     
     <p style="font-size: 20px;"><b>My Skills</b></p>
     <div class="hContainer">
-      <div class="csty yellow1">Microsoft Exel</div>
-      <div class="csty red1">SQL</div>
-      <div class="csty green1">Python</div>
+      <div class="csty yellow">Microsoft Exel</div>
+      <div class="csty red">SQL</div>
+      <div class="csty green">Python</div>
       <div class="csty pink1">Web Development</div>
-      <div class="csty yellow1">R programming</div>
-      <div class="csty red1">Tablau</div>
-      <div class="csty green1">Data Analysis</div>
+      <div class="csty yellow">R programming</div>
+      <div class="csty red">Tablau</div>
+      <div class="csty green">Data Analysis</div>
       <div class="csty pink1">Machine Learning</div>
-      <div class="csty yellow1">Java</div>
+      <div class="csty yellow">Java</div>
     </div>
 
     <p style="font-size: 20px;"><b>Projects that i did</b></p>
     <div class="hContainer2">
-      <div class="csty purple1">Data Visualization</div>
-      <div class="csty pink1">3D Object Detection</div>
+      <div class="csty yellow">Data Visualization</div>
+      <div class="csty red">3D Object Detection</div>
       <div class="csty green">Image Segmentation</div>
     </div>
 
-    <p style="font-size: 20px;"><b>My Hobbies</b></p>
+    <p style="font-size: 20px;"><b>Activities and Interests</b></p>
     <div class="hContainer">
-      <div class="csty yellow">Dance</div>
-      <div class="csty pink1">Basketball</div>
-      <div class="csty red">Swimming</div>
-      <div class="csty blue">Origami</div>
-      <div class="csty purple1">Throwball</div>
-      <div class="csty green">Cooking</div>
+      <div class="csty yellow">Student Council Member in School</div>
+      <div class="csty green">Member of University Dance team</div>
+      <div class="csty red">Member of Leo Club</div>
+      <div class="csty pink1">Swimming</div>
+      <div class="csty yellow">Throwball</div>
+      <div class="csty green">Basketball</div>
     </div>
 
     <div class="whatilivefor">
       <div>
         <h4 style="font-size: 20px;"><b>What i live for?</b></h4>
-        <p style="font-size: 20px;">I live for my family & friends</p>
+        <p style="font-size: 20px;">I live for my family & friends and to explore different places and cuisines...</p>
       </div>
     </div>
 
